--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -51,23 +51,23 @@
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon featured fa-user-circle"></span>
+								<h3>User Interface</h3>
+								<!--<p>.</p>-->
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon solid featured fa fa-cog fa-spin fa-1x fa-"></span>
+								<h3>Responsive Web Design</h3>
+								<!--<p></p>-->
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="icon featured fa-cogs"></span>
+								<h3>Collaborator</h3>
+								<!--<p></p>-->
 							</section>
 						</div>
 					</div>
@@ -82,14 +82,14 @@
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
 					<header>
-						<h2>Here’s some stuff I made recently.</h2>
+						<h2>Here’s my most recent work.</h2>
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
+								<h3><a href="https://github.com/Jwilliams85/Sprint-Challenge--User-Interface.git">User Interface Sample</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
