--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -72,7 +72,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<!--<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>-->
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -83,31 +83,31 @@
 				<div class="container">
 					<header>
 						<h2>Here’s my most recent work.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<!--<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>-->
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/Jwilliams85/Sprint-Challenge--User-Interface.git" class="image featured"><img src="austin-distel-tLZhFRLj6nY-unsplash.jpg" alt="" /></a>
 								<h3><a href="https://github.com/Jwilliams85/Sprint-Challenge--User-Interface.git">User Interface Sample</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<!--<p>Ornare nulla proin odio consequat.</p>-->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://codepen.io/jwilliams85/details/XWJPWxb" class="image featured"><img src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" alt="" /></a>
+								<h3><a href="https://codepen.io/jwilliams85/details/XWJPWxb">Sweet Eats Bakery</a></h3>
+								<!--<p>Ornare nulla proin odio consequat.</p>-->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<a href="https://github.com/Jwilliams85/responsive-web-design-I.git" class="image featured"><img src="domenico-loia-EhTcC9sYXsw-unsplash.jpg" alt="" /></a>
+								<h3><a href="https://github.com/Jwilliams85/responsive-web-design-I.git">Responsive Web Design</a></h3>
+								<!--<p>Ornare nulla proin odio consequat.</p>-->
 							</article>
 						</div>
-						<div class="col-4 col-6-medium col-12-small">
+						<!--<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								<h3><a href="#">Tempus dolore</a></h3>
@@ -127,7 +127,7 @@
 								<h3><a href="#">Sed amet ornare</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
-						</div>
+						</div>-->
 					</div>
 					<footer>
 						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
