--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,10 +28,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
+							<span class="image fit"><img src="lance-anderson-OrpU0RA_HQ8-unsplash.jpg" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
+	
 								<h1>Hi. I'm <strong>Janneth Williams</strong>.</h1>
 							</header>
 							<p>I am a web developer based in Pittsburgh, Pennsylvania.</p>
@@ -46,7 +47,7 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2> <!--Photo by Austin Distel on Unsplash-->
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<!--<p>Odio turpis amet sed consequat eget posuere consequat.</p>-->
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +131,7 @@
 						</div>-->
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Would you like to see more?</p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -141,7 +142,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<!--<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>-->
 					</header>
 					<div class="row">
 						<div class="col-12">
@@ -172,13 +173,13 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
+								<li><a href="https://www.facebook.com/janneth.villarroel" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+								<li><a href="https://www.linkedin.com/in/janneth-williams-89472b63/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<!--<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>-->
+								<!--<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>-->
+								<li><a href="https://github.com/Jwilliams85" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
